--- a/src/Styles/global.scss
+++ b/src/Styles/global.scss
@@ -5,6 +5,22 @@
   font-size: $todoFontSize;
 }
 
+body {
+  background-color: #f5f5f5;
+}
 input::placeholder {
   font-style: italic;
+
 }
+
+ul{
+  margin: 0 auto;
+  padding: 0;
+}
+ li{
+   width: 550px;
+   height: 65px;
+   margin: 0 auto;
+   padding: 0;
+   border-bottom:1px solid rgba(0, 0, 0, 0.2);
+ }
